Enable & Disable modes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <input type="text" readonly id="bottom">
 
         <button id="grid_button">Generate Grid</button> 
+
+        <div>
+          <button id="enable_button">Enable</button>
+          <button id="disable_button">Disable</button>
+        </div>
     </div>
     <div id="info"></div>
 
