--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div>
           <button id="enable_button">Enable</button>
           <button id="disable_button">Disable</button>
+          <button id="generate_path">Generate Path</button>
         </div>
     </div>
     <div id="info"></div>
